fix: consistency icon spacing/margins in dropdown

--- a/src/app/+run-tale/run-tale/run-tale.component.scss
+++ b/src/app/+run-tale/run-tale/run-tale.component.scss
@@ -12,6 +12,11 @@
   }
 }
 
+.fas.fa-fw,
+.fab.fa-fw {
+  margin-right: 0.75rem;
+}
+
 :host {
   min-height: 95%;
   margin: 12pt 0 0 0;
